--- a/src/components/Portfolio/style.module.scss
+++ b/src/components/Portfolio/style.module.scss
@@ -1,7 +1,9 @@
 .image {
   img {
-    max-width: 23.25rem;
-    height: 13rem;
+    max-width: 26.68rem;
+    min-width: 16.8rem;
+    max-height: 14.37rem;
+    min-height: 12.37rem;
     border-radius: 5px;
   }
 }
@@ -51,6 +53,7 @@
     font-size: 1.5rem;
     margin-bottom: 0.625rem;
     font-weight: 500;
+    text-align: center;
   }
 }
 
