--- a/src/components/Menu/style.module.scss
+++ b/src/components/Menu/style.module.scss
@@ -22,10 +22,14 @@
   display: flex;
   flex-direction: row;
   list-style: none;
-}
-.menulist {
   li {
     padding: 1rem 2.5rem;
+    a {
+      &:hover {
+        color: var(--primary-color);
+        font-weight: 500;
+      }
+    }
   }
 }
 
@@ -43,7 +47,7 @@
       background: transparent;
       border: transparent;
       margin-right: 1rem;
-      padding: 0.2rem;   
+      padding: 0.2rem;
       svg {
         font-size: 2rem;
       }
